--- a/Dockerfile.debug
+++ b/Dockerfile.debug
@@ -1,7 +1,6 @@
 # Multi-stage Dockerfile for KataPulse with gdbserver debugging
 # Real-time metrics for Kata Containers. cadvisor-compatible monitoring agent (debug variant).
-# Stage 1: Dependency builder - compiles and caches dependencies
-FROM rust:1.82 as dependencies
+FROM rust:1.82 as builder
 
 WORKDIR /app
 
@@ -11,30 +10,23 @@ RUN apt-get update && apt-get install -y \
     pkg-config \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy only Cargo files to leverage Docker layer caching for dependencies
+# Copy Cargo files
 COPY Cargo.toml Cargo.lock ./
 
-# Create a dummy main.rs to build dependencies
-RUN mkdir -p src && \
-    echo "fn main() {}" > src/main.rs && \
-    cargo build && \
-    rm -rf src
-
-# Stage 2: Code builder - compiles the actual application with debug symbols
-FROM dependencies as builder
-
-WORKDIR /app
-
-# Copy the full source code
+# Copy source code
 COPY src ./src
 
-# Build in debug mode with full debug symbols for debugging
-RUN cargo build
+# Build in debug mode with full debug symbols and cache mounts
+RUN --mount=type=cache,target=/usr/local/cargo/registry \
+    --mount=type=cache,target=/usr/local/cargo/git \
+    --mount=type=cache,target=/app/target \
+    cargo build && \
+    cp /app/target/debug/kata-pulse /kata-pulse
 
 # Verify the binary works
-RUN ./target/debug/kata-pulse --help || true
+RUN /kata-pulse --help || true
 
-# Stage 3: Debug runtime stage
+# Debug runtime stage
 FROM debian:bookworm-slim
 
 WORKDIR /app
@@ -48,7 +40,7 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy the built binary from builder stage (debug build with symbols)
-COPY --from=builder /app/target/debug/kata-pulse /usr/local/bin/kata-pulse
+COPY --from=builder /kata-pulse /usr/local/bin/kata-pulse
 
 # Create wrapper script to start app in background and attach gdbserver
 RUN cat > /usr/local/bin/gdbserver-wrapper.sh << 'EOF'
