--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -80,6 +80,19 @@ jobs:
       - name: Check formatting
         run: cargo fmt -- --check
 
+  helm-lint:
+    name: Helm Chart Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+
+      - uses: azure/setup-helm@v3
+        with:
+          version: latest
+
+      - name: Lint Helm chart
+        run: helm lint helm/kata-pulse
+
   build-release:
     name: Build Release
     runs-on: ubuntu-latest
@@ -102,10 +115,10 @@ jobs:
   # BUILD & PUSH - Multi-architecture Docker build
   # ============================================================================
 
-  build-and-push-docker:
-    name: Build and Push Multi-Arch Docker Image
+  build-publish:
+    name: Build, Push and Publish
     runs-on: ubuntu-latest
-    needs: [test-suite, clippy, fmt, build-release]
+    needs: [test-suite, clippy, fmt, helm-lint, build-release]
     permissions:
       contents: read
       packages: write
@@ -118,7 +131,23 @@ jobs:
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
+        id: setup-buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Cache
+        uses: actions/cache@v4
+        id: cache
+        with:
+          path: cache-mount
+          key: cache-mount
+
+      - name: Restore Docker cache mounts
+        uses: reproducible-containers/buildkit-cache-dance@v3
+        with:
+          builder: ${{ steps.setup-buildx.outputs.name }}
+          cache-dir: cache-mount
+          dockerfile: Dockerfile
+          skip-extraction: ${{ steps.cache.outputs.cache-hit }}
 
       - name: Log in to Container Registry
         if: github.event_name != 'pull_request'
@@ -150,8 +179,15 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      - name: Extract version from tags
+        id: version
+        run: |
+          TAGS="${{ steps.meta.outputs.tags }}"
+          # Get first tag and extract version
+          TAG=$(echo "$TAGS" | head -1 | rev | cut -d: -f1 | rev)
+          echo "version=$TAG" >> $GITHUB_OUTPUT
+
       - name: Generate SBOM
-        if: github.event_name != 'pull_request'
         uses: anchore/sbom-action@v0
         with:
           path: .
@@ -159,8 +195,25 @@ jobs:
           output-file: sbom.spdx.json
 
       - name: Upload SBOM
-        if: github.event_name != 'pull_request'
         uses: actions/upload-artifact@v5
         with:
           name: sbom
           path: sbom.spdx.json
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: latest
+
+      - name: Update Helm Chart appVersion
+        run: |
+          sed -i "s/appVersion: .*/appVersion: \"${{ steps.version.outputs.version }}\"/" helm/kata-pulse/Chart.yaml
+
+      - name: Package Helm chart
+        run: helm package helm/kata-pulse
+
+      - name: Push Helm chart to GHCR
+        run: |
+          echo "${{ secrets.GITHUB_TOKEN }}" | helm registry login -u ${{ github.actor }} --password-stdin ${{ env.REGISTRY }}
+          CHART_FILE=$(ls kata-pulse-*.tgz | head -1)
+          helm push "$CHART_FILE" oci://${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/helm
