--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,7 +22,8 @@ env:
   CARGO_TERM_COLOR: always
   RUST_BACKTRACE: 1
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ${{ github.repository }}/kata-pulse
+  CHART_NAME: ${{ github.repository }}/chart
 
 jobs:
   # ============================================================================
@@ -138,6 +139,11 @@ jobs:
         id: setup-buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: latest
+
       - name: Cache
         uses: actions/cache@v4
         id: cache
@@ -204,10 +210,30 @@ jobs:
           name: sbom
           path: sbom.spdx.json
 
-      - name: Set up Helm
-        uses: azure/setup-helm@v3
+      - name: Scan with Grype
+        uses: anchore/scan-action@v3
+        id: scan
         with:
-          version: latest
+          image: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}'
+          fail-build: false
+          output-format: sarif
+
+      - name: Upload Grype scan results
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: ${{ steps.scan.outputs.sarif }}
+
+      - name: Run Trivy scan
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+
+      - name: Upload Trivy results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-results.sarif'
 
       - name: Update Helm Chart appVersion
         run: |
@@ -220,4 +246,4 @@ jobs:
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | helm registry login -u ${{ github.actor }} --password-stdin ${{ env.REGISTRY }}
           CHART_FILE=$(ls kata-pulse-*.tgz | head -1)
-          helm push "$CHART_FILE" oci://${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-chart
+          helm push "$CHART_FILE" oci://${{ env.REGISTRY }}/${{ env.CHART_NAME }}
