--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -250,3 +250,33 @@ jobs:
           echo "${{ secrets.GITHUB_TOKEN }}" | helm registry login -u ${{ github.actor }} --password-stdin ${{ env.REGISTRY }}
           CHART_FILE=$(ls kata-pulse-*.tgz | head -1)
           helm push "$CHART_FILE" oci://${{ env.REGISTRY }}/${{ env.CHART_NAME }}
+
+  # ============================================================================
+  # RELEASE CREATION
+  # ============================================================================
+
+  create-release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    needs: [build-publish]
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+
+      - name: Download SBOM artifact
+        uses: actions/download-artifact@v5
+        with:
+          name: sbom
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            sbom.spdx.json
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
