--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -125,7 +125,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test-suite, clippy, fmt, helm-lint, build-release]
     permissions:
-      contents: read
+      contents: write
       security-events: write
       packages: write
     env:
@@ -262,6 +262,7 @@ jobs:
     needs: [build-publish]
     permissions:
       contents: write
+
 
     steps:
       - name: Checkout code
