--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -213,23 +213,43 @@ jobs:
           name: sbom
           path: sbom.spdx.json
 
-      - name: Scan with Grype
+  # ============================================================================
+  # SECURITY SCANNING
+  # ============================================================================
+
+  scan-grype:
+    name: Grype Security Scan
+    runs-on: ubuntu-latest
+    needs: [build-publish]
+    permissions:
+      security-events: write
+
+    steps:
+      - name: Run Grype scan
         uses: anchore/scan-action@v6
         id: scan
         with:
-          image: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}'
+          image: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}'
           fail-build: false
           output-format: sarif
 
-      - name: Upload Grype scan results
+      - name: Upload Grype results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: ${{ steps.scan.outputs.sarif }}
 
+  scan-trivy:
+    name: Trivy Security Scan
+    runs-on: ubuntu-latest
+    needs: [build-publish]
+    permissions:
+      security-events: write
+
+    steps:
       - name: Run Trivy scan
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}'
+          image-ref: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}'
           format: 'sarif'
           output: 'trivy-results.sarif'
 
@@ -238,8 +258,32 @@ jobs:
         with:
           sarif_file: 'trivy-results.sarif'
 
+  # ============================================================================
+  # HELM CHART PUBLISHING
+  # ============================================================================
+
+  publish-helm:
+    name: Publish Helm Chart
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    needs: [build-publish]
+    permissions:
+      contents: read
+      packages: write
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: latest
+
       - name: Package Helm chart
-        run: helm package helm/kata-pulse --version "${{ steps.version.outputs.version }}" --app-version "${{ steps.version.outputs.version }}"
+        run: helm package helm/kata-pulse --version "${{ github.ref_name }}" --app-version "${{ github.ref_name }}"
 
       - name: Push Helm chart to GHCR
         run: |
@@ -255,7 +299,7 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
-    needs: [build-publish]
+    needs: [build-publish, publish-helm]
     permissions:
       contents: write
 
