--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -121,7 +121,7 @@ jobs:
   # ============================================================================
 
   build-publish:
-    name: Build, Push and Publish
+    name: Publish Docker Image
     runs-on: ubuntu-latest
     needs: [test-suite, clippy, fmt, helm-lint, build-release]
     permissions:
