--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ path = "src/main.rs"
 
 [dependencies]
 # HTTP and server
-actix-web = "4.4"
+axum = "0.8.6"
 tokio = { version = "1.35", features = ["full"] }
 
 # Logging
@@ -20,10 +20,9 @@ tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 
 # Error handling
 anyhow = "1.0"
-thiserror = "2.0.17"
 
 # Configuration
-clap = { version = "4.4", features = ["derive", "env"] }
+clap = { version = "4.5", features = ["derive", "env"] }
 
 # Container runtime clients
 containerd-client = "0.8.0"  # Unix socket connection to containerd
@@ -31,9 +30,10 @@ k8s-cri = "0.10"           # Kubernetes CRI API types and RuntimeServiceClient
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
+# Async utilities
 futures = "0.3"
-once_cell = "1.19"
 
 [dev-dependencies]
 
