feat: fixed missing honorLabels which prevents renaming existing clashing labels into exported_(pod/namespace/...)

--- a/helm/kata-pulse/templates/podmonitor.yaml
+++ b/helm/kata-pulse/templates/podmonitor.yaml
@@ -18,6 +18,7 @@ spec:
       interval: {{ .Values.podMonitor.interval }}
       scrapeTimeout: {{ .Values.podMonitor.scrapeTimeout }}
       path: /metrics
+      honorLabels: true
       {{- with .Values.podMonitor.relabelings }}
       relabelings:
         {{- toYaml . | nindent 8 }}
