--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ serde_json = "1.0"
 # Async utilities
 futures = "0.3"
 
+# System configuration
+libc = "0.2.177"
+
 [dev-dependencies]
 
 [profile.release]
