--- a/helm/kata-pulse/values.yaml
+++ b/helm/kata-pulse/values.yaml
@@ -36,6 +36,10 @@ config:
   runtimeEndpoint: "/run/containerd/containerd.sock"
   metricsIntervalSecs: 60
   logLevel: "info"
+  # CPU jiffy conversion factor (CLK_TCK) for converting /proc/stat jiffies to seconds
+  # If not set, the application will auto-detect via sysconf(_SC_CLK_TCK), falling back to 100 Hz
+  # Common values: 100 (most Linux systems), 250, 1000
+  cpuJiffyConversionFactor: null
 
 volumeMounts:
   - name: sandbox-dir
